# HarmonyForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_GENERATE_BEAT.py  analyze_musicality.py  audit_midi.py  debug_melody.py  generate_batch.py  generate_examples.py  generate_orest_nick_mira.py  hf.bat  pyproject.toml  test_gravity_crash.py
OREST_PRODUCTIONS/: stem_bass.mid  stem_chords.mid  stem_counter_melody.mid  stem_melody.mid
benchmark_out/1_metro_future/: arrangement.json  full_arrangement.mid  stem_bass.mid  stem_chords.mid  stem_melody.mid
benchmark_out/2_southside_evil/: arrangement.json  full_arrangement.mid  stem_bass.mid  stem_chords.mid  stem_melody.mid
benchmark_out/3_mikedean_hybrid/: arrangement.json  full_arrangement.mid  stem_bass.mid  stem_chords.mid  stem_melody.mid
benchmark_out/4_bouncy_trap/: arrangement.json  full_arrangement.mid  stem_bass.mid  stem_chords.mid  stem_melody.mid
output/: bass.mid  melody.mid  progression.mid
src/harmonyforge/: __init__.py
src/harmonyforge/ai/: models.py  prompt_parser.py
src/harmonyforge/analysis/: audio_analyzer.py  evaluation.py  voice_leading.py
src/harmonyforge/cli/: main.py
src/harmonyforge/core/: config.py
src/harmonyforge/generation/: arrangement_generator.py  bass_generator.py  counter_melody.py  melody_generator.py  progression_generator.py  vocal_topline.py
src/harmonyforge/midi/: exporter.py  humanizer.py
src/harmonyforge/styles/: artists.py  genome.py  producers.py
src/harmonyforge/testing/: benchmark.json  producer_simulation_50.py  test_parser.py  validation_suite.py
src/harmonyforge/theory/: chords.py  harmony.py  roman.py  scales.py
tests/: test_core.py
