[project]
name = "harmonyforge"
version = "1.0.0"
description = "AI-assisted MIDI composition engine for professional music producers"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Orestis", email = "orestis@harmonyforge.io" }
]
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "music21",
    "mido",
    "pretty_midi>=0.2.10",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
]
audio = [
    "librosa>=0.10.0",
    "scipy>=1.13.0",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
harmonyforge = "harmonyforge.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
